--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
@@ -1,12 +1,264 @@
 <!DOCTYPE HTML>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <title th:text="${'Perfil: ' + usuario.nombre + ' ' + usuario.apellido}"></title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>Perfil</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/perfil.css}" rel="stylesheet">
+    <link th:href="@{/css/style.css}" rel="stylesheet">
+
+    <link th:href="@{/plugins/nerd-fonts/css/nerd-fonts.css}" rel="stylesheet">
+    <link th:href="@{/plugins/bootstrap/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/plugins/bootstrap/bootstrap-slider.css}" rel="stylesheet">
+    <!--    <link th:href="@{/plugins/font-awesome/css/font-awesome.min.css}" rel="stylesheet">-->
+    <link th:href="@{/plugins/slick/slick.css}" rel="stylesheet">
+    <link th:href="@{/plugins/slick/slick-theme.css}" rel="stylesheet">
+    <link th:href="@{/plugins/jquery-nice-select/css/nice-select.css}" rel="stylesheet">
+
+    <!-- Use Thymeleaf expressions for JavaScript URLs -->
+    <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/popper.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/bootstrap.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/bootstrap-slider.js}"></script>
+    <script th:src="@{/plugins/tether/js/tether.min.js}"></script>
+    <script th:src="@{/plugins/raty/jquery.raty-fa.js}"></script>
+    <script th:src="@{/plugins/slick/slick.min.js}"></script>
+    <script th:src="@{/plugins/jquery-nice-select/js/jquery.nice-select.min.js}"></script>
+    <script th:src="@{/plugins/google-map/map.js}" defer></script>
+    <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
+
+    <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
+    <script th:src="@{/js/script.js}"></script>
 </head>
 <body>
-<h1>Info de Perfil</h1>
-<div th:text="${usuario.nombre + ' ' + usuario.apellido}"></div>
-<img th:src="${'../' + usuario.avatar}" alt="avatar" width="55px" height="55px">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+<div class="container">
+    <div class="row">
+        <div class="col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="dropdown float-end">
+                        <a href="#" class="dropdown-toggle arrow-none card-drop" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="mdi mdi-dots-vertical"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end">
+
+                            <a href="javascript:void(0);" class="dropdown-item">Edit</a>
+
+                            <a href="javascript:void(0);" class="dropdown-item">Delete</a>
+
+                            <a href="javascript:void(0);" class="dropdown-item">Block</a>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-start">
+                        <img th:src="${'../' + usuario.avatar}" class="rounded-circle avatar-lg img-thumbnail" alt="profile-image">
+                        <div class="w-100 ms-3">
+                            <h4 th:text="${usuario.nombre + ' ' + usuario.apellido}" class="my-0"></h4>
+                            <p class="text-muted">@webdesigner</p>
+                            <div class="profile-cover__action bg--img" data-overlay="0.3">
+                                <button class="btn btn-rounded btn-info">
+                                    <i class="fa fa-plus"></i>
+                                    <span>Follow</span>
+                                </button>
+                                <button class="btn btn-rounded btn-info">
+                                    <i class="fa fa-comment"></i>
+                                    <span>Message</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6">
+                            <div class="mt-3">
+                                <h4 class="font-13 text-uppercase">About Me :</h4>
+                                <p class="text-muted font-13 mb-3">
+                                    Hi I'm Johnathn Deo,has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.
+                                </p>
+                                <p class="text-muted mb-2 font-13"><strong>Full Name :</strong> <span class="ms-2">Geneva D. McKnight</span></p>
+                                <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ms-2">USA</span></p>
+                            </div>
+                            <ul class="social-list list-inline mt-3 mb-0">
+                                <li class="list-inline-item">
+                                    <a href="javascript: void(0);" class="social-list-item text-center border-primary text-primary"><i class="mdi mdi-facebook"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="javascript: void(0);" class="social-list-item text-center border-danger text-danger"><i class="mdi mdi-google"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="javascript: void(0);" class="social-list-item text-center border-info text-info"><i class="mdi mdi-twitter"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="javascript: void(0);" class="social-list-item text-center border-secondary text-secondary"><i class="mdi mdi-github"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-xl-6">
+                            <div class="card-body text-center">
+                                <div class="row">
+                                    <div class="col-4 border-end border-light">
+                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Applied</h5>
+                                        <h2 class="mb-0 fw-bold">116</h2>
+                                    </div>
+                                    <div class="col-4 border-end border-light">
+                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Reviewed</h5>
+                                        <h2 class="mb-0 fw-bold">87</h2>
+                                    </div>
+                                    <div class="col-4">
+                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Contacted</h5>
+                                        <h2 class="mb-0 fw-bold">98</h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="border border-light p-2 mb-3">
+                        <h4 class="header-title mb-3">Viajes creados</h4>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="trending-ads-slide">
+
+                                    <div class="col-sm-12 col-lg-4" th:each="viaje : ${viajes}">
+                                        <div class="col-sm-12 col-lg-4">
+                                            <div class="card" style="width: 20rem;">
+                                                <div th:style="'background-image: url(' + ${'../'+viaje.background} + '); height: 200px;'"></div>
+                                                <div class="card-body">
+                                                    <div class="header-card">
+                                                        <img th:src="${'../'+viaje.avatar}" alt="avatar" width="55px" height="55px"
+                                                             class="rounded-circle">
+                                                    </div>
+                                                    <div><h5 class="card-title" th:text="${viaje.nombre}"></h5></div>
+                                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${#dates.format(viaje.fechaViaje, 'dd/MM/yyyy')}"></p>
+                                                    </div>
+
+                                                </div>
+                                                <ul class="list-group list-group-flush">
+                                                    <li class="list-group-item"><i class="fa-solid fa-signs-post fa-xl"></i> Origen: <span
+                                                            th:text="${viaje.origen}"></span></li>
+                                                    <li class="list-group-item"><i class="fa-solid fa-flag-checkered fa-xl"></i> Destino:
+                                                        <span th:text="${viaje.destino}"></span></li>
+                                                    <li class="list-group-item">
+                                                        <i class="fa-solid fa-paw fa-lg"></i>
+                                                        <i class="fa-solid fa-ban-smoking fa-lg"></i>
+                                                        <i class="fa-solid fa-guitar fa-lg"></i>
+                                                        <i class="fa-solid fa-baby-carriage fa-lg"></i>
+                                                    </li>
+                                                </ul>
+                                                <div class="card-body">
+                                                    <a th:href="@{/ver-viaje(id=${viaje.id})}" class="card-link">Mas Info</a>
+                                                    <a th:href="@{/perfil/usuario(email='marianoochoa@unlam.edu.ar')}" class="card-link">Ver Perfil</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="border border-light p-2 mb-3">
+                        <h4 class="header-title mb-3">Viajes realizados</h4>
+                        <div class="trending-ads-slide">
+
+                            <div class="col-sm-12 col-lg-4" th:each="viaje : ${viajes}">
+                                <div class="col-sm-12 col-lg-4">
+                                    <div class="card" style="width: 20rem;">
+                                        <div th:style="'background-image: url(' + ${'../'+ viaje.background} + '); height: 200px;'"></div>
+                                        <div class="card-body">
+                                            <div class="header-card">
+                                                <img th:src="${'../'+viaje.avatar}" alt="avatar" width="55px" height="55px"
+                                                     class="rounded-circle">
+                                            </div>
+                                            <div><h5 class="card-title" th:text="${viaje.nombre}"></h5></div>
+                                            <div><p class="card-text" th:text="'Fecha de Salida: ' + ${#dates.format(viaje.fechaViaje, 'dd/MM/yyyy')}"></p>
+                                            </div>
+
+                                        </div>
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item"><i class="fa-solid fa-signs-post fa-xl"></i> Origen: <span
+                                                    th:text="${viaje.origen}"></span></li>
+                                            <li class="list-group-item"><i class="fa-solid fa-flag-checkered fa-xl"></i> Destino:
+                                                <span th:text="${viaje.destino}"></span></li>
+                                            <li class="list-group-item">
+                                                <i class="fa-solid fa-paw fa-lg"></i>
+                                                <i class="fa-solid fa-ban-smoking fa-lg"></i>
+                                                <i class="fa-solid fa-guitar fa-lg"></i>
+                                                <i class="fa-solid fa-baby-carriage fa-lg"></i>
+                                            </li>
+                                        </ul>
+                                        <div class="card-body">
+                                            <a th:href="@{/ver-viaje(id=${viaje.id})}" class="card-link">Mas Info</a>
+                                            <a th:href="@{/perfil/usuario(email='marianoochoa@unlam.edu.ar')}" class="card-link">Ver Perfil</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+                        <div class="text-center">
+                            <a href="javascript:void(0);" class="text-danger"><i class="mdi mdi-spin mdi-loading me-1"></i> Load more </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="border border-light p-2 mb-3">
+                        <h4 class="header-title mb-3">Reseñas</h4>
+                        <div class="d-flex align-items-start post-user-comment-box">
+                            <img class="me-2 avatar-sm rounded-circle" src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="Generic placeholder image">
+                            <div class="w-100">
+                                <h5 class>Thelma Fridley <small class="text-muted"> 1 hour ago</small></h5>
+                                <div class>
+                                    Cras sit amet nibh libero, in
+                                    gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                                    purus odio, vestibulum in vulputate at, tempus viverra turpis. Duis
+                                    sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper
+                                    porta. Mauris massa.
+                                    <br>
+                                    <a href="javascript: void(0);" class="text-muted font-13 d-inline-block mt-2"><i class="mdi mdi-reply"></i> Reply</a>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="text-center">
+                        <a href="javascript:void(0);" class="text-danger"><i class="mdi mdi-spin mdi-loading me-1"></i> Load more </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript"></script>
+<script src="plugins/jquery/jquery.min.js"></script>
+<script src="plugins/bootstrap/popper.min.js"></script>
+<script src="plugins/bootstrap/bootstrap.min.js"></script>
+<script src="plugins/bootstrap/bootstrap-slider.js"></script>
+<script src="plugins/tether/js/tether.min.js"></script>
+<script src="plugins/raty/jquery.raty-fa.js"></script>
+<script src="plugins/slick/slick.min.js"></script>
+<script src="plugins/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
+<script src="plugins/google-map/map.js" defer></script>
+
+<script th:src="@{js/script.js}"></script>
 </body>
 </html>
