--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
@@ -2,13 +2,8 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Perfil</title>
+    <title>Mi Perfil</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Agency HTML Template">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="author" content="Themefisher">
-    <meta name="generator" content="Themefisher Classified Marketplace Template v1.0">
-    <meta name="theme-name" content="classimax"/>
 
     <!-- Use Thymeleaf expressions for CSS URLs -->
     <link th:href="@{/plugins/nerd-fonts/css/nerd-fonts.css}" rel="stylesheet">
@@ -37,6 +32,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/perfil.css}" rel="stylesheet">
+    <link th:href="@{/css/viaje.css}" rel="stylesheet">
 </head>
 
 <body class="body-wrapper">
@@ -160,12 +156,117 @@
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-xl-12">
             <div class="card">
                 <div class="card-body">
                     <div class="border border-light p-2 mb-3">
-                        <h4 class="header-title mb-3">Viajes creados</h4>
+                        <h3 class="header-title mb-3">Tus próximos viajes...</h3>
+                            <div th:each="viaje : ${viajes}">
+                                    <div class="card card-margin flex-row">
+                                        <div class="flex-row userInfo text-center">
+                                            <div class="flex-row">
+                                                    <img th:src="${'../' + viaje.usuario.avatar}" alt="avatar" class="rounded-circle img-avatar-size img-fluid">
+                                                    <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}" class="card-title"></h4>
+                                                    <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}" class="card-link">Ver Perfil</a>
+                                            </div>
+                                        </div>
+                                        <div class=" col-lg-10 d-block paddingNone">
+                                            <div class="card-header no-border">
+                                                <div class="col-lg-4 card-body">
+                                                    <div class="widget-49">
+                                                        <div class="widget-49">
+                                                            <div class="widget-49-date-warning">
+<!--                                                            <span class="widget-49-pro-title">Fecha de salida</span>
+                                                                <span class="widget-49-date-day" th:text="${viaje.fecha_hora}"></span>-->
+                                                                <span class="widget-49-pro-title">Fecha de salida: </span>
+                                                                <span class="widget-49-pro-title" th:text="${viaje.fecha_hora}"></span>
+                                                            </div>
+                                                            <div class="widget-49-meeting-info">
+                                                                <p class="card-text" th:text="'Origen: ' + ${viaje.origen.provincia.nombre} + ', ' + ${viaje.origen.nombre}"></p>
+                                                                <p class="card-text" th:text="'Destino: ' + ${viaje.destino.provincia.nombre} + ', ' + ${viaje.destino.nombre}"></p>
+<!--                                                                <span class="widget-49-pro-title" th:text="${viaje.destino.nombre}"></span>
+                                                                <span class="widget-49-meeting-time" th:text="${viaje.destino.provincia.nombre}"></span>-->
+                                                            </div>
+                                                        </div>
+                                                        <div class="widget-49-title-wrapper">
+                                                            <div class="widget-49-date-warning">
+                                                                <span class="widget-49-date-day">2</span>
+                                                                <p class="card-text" th:text="'Lugares disponibles: ' + ${viaje.cantidad}"></p>
+                                                            </div>
+<!--                                                            <div class="widget-49-meeting-info">
+                                                                <span class="widget-49-pro-title">Lugares disponibles</span>
+                                                            </div>-->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3 card-body">
+                                                    <div class="widget-49">
+                                                        <div class="widget-49-title-wrapper">
+                                                            <div class="widget-49-meeting-info ">
+                                                                <div class="flex-row">
+                                                                    <span class="widget-49-meeting-time">Viaje Publico</span>
+                                                                    <span class="widget-49-meeting-time">No Fumar</span>
+                                                                </div>
+                                                                <div class="flex-row">
+                                                                    <span class="widget-49-meeting-time">No niños</span>
+                                                                    <span class="widget-49-meeting-time">No Mascotas</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="widget-49-title-wrapper">
+                                                            <div class="widget-49-meeting-info flex-row">
+                                                                <span class="widget-49-pro-title">Distancia a recorrer</span>
+                                                                <span class="widget-49-meeting-time">291km</span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="widget-49-title-wrapper">
+                                                            <div class="widget-49-meeting-info flex-row">
+                                                                <span class="widget-49-pro-title">Tiempo estimado de viaje</span>
+                                                                <span class="widget-49-meeting-time">30 minutos</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3 card-body">
+                                                    <div class="widget-49">
+                                                        <div class="widget-49-title-wrapper">
+                                                            <div class="widget-49-meeting-info ">
+                                                                <div class="flex-row">
+                                                                    <span class="widget-49-meeting-time">Viaje Publico</span>
+                                                                    <span class="widget-49-meeting-time">No Fumar</span>
+                                                                </div>
+                                                                <div class="flex-row">
+                                                                    <span class="widget-49-meeting-time">No niños</span>
+                                                                    <span class="widget-49-meeting-time">No Mascotas</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="widget-49-title-wrapper">
+                                                            <div class="widget-49-meeting-info flex-row">
+                                                                <span class="widget-49-pro-title">Distancia a recorrer</span>
+                                                                <span class="widget-49-meeting-time">291km</span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="widget-49-title-wrapper">
+                                                            <div class="widget-49-meeting-info flex-row">
+                                                                <span class="widget-49-pro-title">Tiempo estimado de viaje</span>
+                                                                <span class="widget-49-meeting-time">30 minutos</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div class="widget-49-meeting-action d-flex" style="padding: 10px 10px;background-color: grey;">
+                                                    <a href="#" style="padding: 5px;background-color: red;color:white;font-size: medium;border-radius:3px;">ENVIAR MENSAJE</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                            </div>
+
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="trending-ads-slide">
