--- a/src/main/webapp/resources/core/css/perfil.css
+++ b/src/main/webapp/resources/core/css/perfil.css
@@ -47,6 +47,9 @@ body{
     height: 3.5rem;
     width: 3.5rem;
 }
+.img-avatar-size {
+    padding-bottom: 5px;
+}
 .rounded-circle {
     border-radius: 50%!important;
 }
